tests/error/03.desc
Runtime error - slice func: left border is greater